  (using uncorrelated assumption for bin() and correlated for bin_spatial()).

* Added global option to determine whether uncertainty propagation should
  use a correlated or uncorrelated approach. Currently only used for the bin()
  operation.

* Added global option to create a collocation_datetime variable when performing
  a collocate_left() or collocate_right() operation.

* Added derivation to retrieve angstrom exponent from aerosol optical depth.

* Added derivation to retrieve tropospheric/stratospheric column avk from
  total column avk and tropopause altitude.

* Updates to product ingestions:
  - S5P L2 CLOUD: added cloud_type and cloud_top_temperature
  - S5P L2 O3: added qa_filter=custom ingestion option to set validity based
    on official PRF recommendation for processor V1.x generated products
  - MLS L2: fixed memory issue in reading of validity variable and updated
    validity flag mapping to version 4.x-4.0 of the Data Quality document

1.11 2020-05-19
~~~~~~~~~~~~~~~

* Added derivations to retrieve column number density from column vmr.

* Fixed issue in bin_spatial() where the weightfactor could be too high when
  oversampling the input data. Grid cells that intersected with the data
  polygon could end up with a weightfactor >1.0 (but <2.0).

* Fixed issue where molar mass was incorrectly provided for the species with
  the shortest matching name. e.g. the molar mass of CO was returned for CO2
  and of NO for NO2. This impacts vmr <-> mmr conversions for BrO2, COF2, COS,
  CO2, C2H2O2, H2O2, NOCl, NO2, N2O, N2O5, and all isotopologues (e.g. H2O_161).

* Removed irrelevant harp_str64() and harp_str64u() functions (HARP does not
  support 64bit integers).

* Fixed issue where molar mass linked to variables with a 'surface',
  'tropospheric', or 'stratospheric' prefix returned 0.

* Fixed error/crash in deriving dry air column vmr from dry air column mmr.

* Updates to product ingestions: