@@ -130,6 +130,7 @@ int harp_path_find_file(const char *searchpath, const char *filename, char **loc
 int harp_path_from_path(const char *initialpath, int is_filepath, const char *appendpath, char **resultpath);
 int harp_path_for_program(const char *argv0, char **location);
 int harp_is_identifier(const char *name);
+int harp_match_wildcard(const char *pattern, const char *name);
 long harp_parse_double(const char *buffer, long buffer_length, double *dst, int ignore_trailing_bytes);
 long harp_get_max_string_length(long num_strings, char **string_data);
 int harp_get_char_array_from_string_array(long num_strings, char **string_data, long min_string_length,
